@@ -3,6 +3,14 @@ plugins {
     id 'org.jetbrains.intellij' version '1.4.0'
     id 'org.jetbrains.grammarkit' version '2021.2.1'
     id 'net.saliman.properties' version '1.5.2'
+    id 'org.gradle.test-retry' version '1.3.1'
+    id 'com.adarshr.test-logger' version '3.1.0'
+}
+
+testlogger {
+    theme 'mocha'
+    showStandardStreams true
+    showSkipped false
 }
 
 // The same as `--stacktrace` param
@@ -11,6 +19,7 @@ gradle.startParameter.showStacktrace = ShowStacktrace.ALWAYS
 apply plugin: 'java'
 apply plugin: 'org.jetbrains.intellij'
 apply plugin: 'org.jetbrains.grammarkit'
+apply plugin: 'org.gradle.test-retry'
 
 repositories {
     mavenCentral()
@@ -43,12 +52,15 @@ intellij {
         untilBuild = pluginUntilBuild
         changeNotes = """
                 <ul>
-                    <li>No autocompletion in strings. No auto-completion for numbers, and floats. (#66)</li>
-                    <li>Fix errors when using modules. (#65)</li>
-                    <li>Fix problems with the highlighter (#45)</li>
-                    <li>Use "dune --version" to set value in dune-project. (#43)</li>
-                    <li>Custom error messages if the SDK is invalid. (#42)</li>
-                    <li>Available for 203.*</li>
+                    <li>Remade of the auto-selection of a statement (#85)</li>
+                    <li>Continuous integration (#83, internal)</li>
+                    <li>Wider range of OCaml versions (#81)</li>
+                    <li>Fixed sending statement with "and" to the REPL (#80)</li>
+                    <li>Can send the selected code again! (#80)</li>
+                    <li>Fix issue with multiline comments in the REPL (#80)</li>
+                    <li>Can be used outside OCaml Modules (#75)</li>
+                    <li>Executables are named {name}.out, fixing the issue (#71)</li>
+                    <li>Fix empty variable view for type option (#63)</li>
                     <li>See <a href="https://github.com/QuentinRa/intellij-ocaml/blob/main/CHANGELOG.md">CHANGELOG.md</a></li>
                 <ul>
             """.stripIndent()
@@ -126,6 +138,7 @@ test {
                 '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
                 '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED',
                 '--add-opens', 'java.base/java.io=ALL-UNNAMED',
+                '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED',
                 '--add-opens', 'jdk.unsupported/sun.misc=ALL-UNNAMED',
                 '--add-opens', 'java.desktop/sun.awt=ALL-UNNAMED',
                 '--add-opens', 'java.desktop/sun.font=ALL-UNNAMED',
@@ -142,4 +155,16 @@ test {
     // Also note that IDEA does the same thing at startup, and not only for tests.
     systemProperty("jna.nosys", "true")
     filter.failOnNoMatchingTests(false)
+
+    System.setProperty("idea.log.debug.categories", "ocaml.tests")
+    System.setProperty("log4j.debug", "true")
+    systemProperty "idea.log.debug.categories", "ocaml.tests"
+    systemProperty "log4j.debug", true
+
+    if (System.getenv("CI") != null) {
+        retry {
+            maxRetries.set(3)
+            maxFailures.set(5)
+        }
+    }
 }
